# cpp_starter

./: .clang-format  .gitignore  CMakeLists.txt
greeting/: greeting.h
include/: greeting.h
src/: CMakeLists.txt
test/: test_greeting copy.cpp
